[project]
name = "AniLinkPy"
version = "1.0.0"
description = "API wrapper for AniManga sites such as Anilist, MyAnimeList, Kitsu."
authors = [{ name = "RLAlpha49", email = "alexpettigrew29@gmail.com"}]
readme = "README.md"
requires-python = ">3.8.1"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8.1",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry]
name = "AniLinkPy"
version = "1.0.0"
description = "API wrapper for AniManga sites such as Anilist, MyAnimeList, Kitsu."
authors = ["RLAlpha49"]
readme = "README.md"
license = "MIT"
packages = [{ include = "src/AniLinkPy/**/*" }]

[tool.poetry.dependencies]
python = "^3.8.1"
requests = "*"

[tool.poetry.dev-dependencies]
python-dotenv = "*"
isort = "^5.13.2"
black = "^24.4.2"
pylint = "^3.1.0"
flake8 = "^7.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.21"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.25.1"}
mkdocs-git-revision-date-localized-plugin = "^1.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120