[project]
name = "AniLinkPy"
version = "1.0.2"
description = "API wrapper for AniManga sites such as Anilist, MyAnimeList, Kitsu."
authors = [{ name = "RLAlpha49", email = "RLAlpha49 <75044176+RLAlpha49@users.noreply.github.com>"}]
readme = "README.md"
requires-python = ">3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry]
name = "AniLinkPy"
version = "1.0.2"
description = "API wrapper for AniManga sites such as Anilist, MyAnimeList, Kitsu."
authors = ["RLAlpha49"]
readme = "README.md"
license = "MIT"
packages = [{ include = "AniLinkPy/**/*" }]

[tool.poetry.dependencies]
python = "^3.9"
requests = "*"

[tool.poetry.dev-dependencies]
python-dotenv = "*"
types-requests = "*"
twine = "^5.1.0"
isort = "^5.13.2"
black = "^24.4.2"
pylint = "^3.2.3"
mypy = "^1.10.0"
flake8 = "^7.0.0"
mkdocs = "^1.6.0"
mkdocs-material = "^9.5.25"
mkdocstrings = {extras = ["crystal", "python"], version = "^0.25.1"}
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
mkdocs-git-committers-plugin-2 = "^2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "scripts:build"
clean = "scripts:clean"

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.flake8]
max-line-length = 120

[tool.pylint]
max-line-length = 120
disable = "too-few-public-methods,missing-module-docstring,invalid-name,R0801"